# lucid

./: .gitignore  .ocamlformat  AEC_README.md  Dockerfile  LICENSE  LucidPatternsRemoved.dpt  Makefile  basicCompile.bfa  buggy copy.dpt  buggy.dpt  cms_opt.dpt  debug.dpt  docker_dpt.sh  docker_lucid.sh  dpt.opam  dune-project  dune-workspace  files copy.txt  files.txt  install_dependencies.sh  lowlevel_fp.dpt  lowlevel_fp.json  lucid.sh  lucidRegex_DHCP.dpt  lucidRegex_basicCompile copy.dpt  lucidRegex_basicCompile.dpt  lucidRegex_port_knocking.dpt  lucidRegex_videofp_oneentry.dpt  lucidRegex_videofp_oneentry.json  rawlink.opam  readme.md  run_all.sh  set_lucid.bash  sigcomm_artifact_readme.md  simplified.dpt  test.dpt  test.py  testcompile  tofino_dev.sh  vm_install_sde.sh  (+2 more)
src/lib/: dune
src/lib/backend/: Consts.ml  DFSyntax.ml  LLSyntax.ml  OGSyntax.ml  P4TofinoGlobalDirectory.ml  PipeSyntax.ml  SLSyntax.ml  TofinoCoreForms.ml  TofinoCoreToP4.ml  backend_notes.md  if_translation.md  instrSeqSyntax.ml  instrSyntax.ml  miscUtils.ml  tofinoCore.ml  tofinoCoreNew.ml  tofinoCorePrinting.ml  tofinoEgress.ml  tofinoPipeline.ml  tofinoPipelineNew.ml  tofinoProfiling.ml
src/lib/backend/DFOptimize/: BranchElimination.ml  DataFlow.ml  Liveliness.ml  MergeUtils.ml  RegisterAllocation.ml  RuleSolve.ml
src/lib/backend/LLTranslate/: LLConfig.ml  LLConstants.ml  LLContext.ml  LLMemop.ml  LLOp.ml  LLTranslate.ml  LLValidate.ml  LogIr.ml
src/lib/backend/OGPreprocess/: InterpHelpers.ml  addDefaultBranches.ml  eliminateBools.ml  eliminateConsts.ml  eliminateEqRangeOps.ml  normalizeBools.ml  normalizeInts.ml  partialSingleAssignment.ml  poplPatches.ml  precomputeArgs.ml  singleAssignment.ml  uniqueSpans.ml
src/lib/backend/SLPrint/: P4tMgrPrint.ml  PrintUtils.ml  p4tContext.ml  p4tPrint.ml  p4tStats.ml
src/lib/backend/analysis/: DependencyProfiling.ml  ExternalLayout.ml  InputChecks.ml
src/lib/backend/c/: CCoreConfig.ml  CCoreDrivers.ml  CCoreExceptions.ml  CCorePPrint.ml  CCorePasses.ml  CCoreSyntax.ml  CCoreToCore.ml  CCoreTransformers.ml  CCoreUtils.ml  CPasses.ml  cLibs.ml  cPipeline.ml  cTransformations.ml  cTranslate.ml  strUtils.ml
src/lib/backend/c_new/: CCoreDrivers.ml  CCorePPrint.ml  CCorePrinting.ml  CCoreSyntax.ml  CCoreTNameToTAbstr.ml  CCoreToCore.ml  CCoreTransformers.ml  CCoreTyper.ml  CPasses.ml  CheckFFuns.ml  CoreRegularizeMemops.ml  CoreToCCore.ml  CoreToFCore.ml  FCorePrinting.ml  FCoreSyntax.ml  FCoreToCore.ml
src/lib/backend/checks/: EventAlignment.ml
src/lib/backend/debug/: BackendLogging.ml  DagExamples.ml  DagToP4.ml  DebugPrint.ml  print_scrap.ml
src/lib/backend/layout/: coreCdg.ml  coreCfg.ml  coreDeparse.ml  coreDfg.ml  coreLayout.ml  coreLayoutOld.ml  coreResources.ml
src/lib/backend/optimize/: BranchElimination.ml  DagSyntax.ml  DataFlow.ml  Liveliness.ml  MergeUtils.ml  PipelineGeneration.ml  PipelinePlanning.ml  RegisterAllocation.ml  RuleSolve.ml
src/lib/backend/p4/: ControlPrinter.ml  P4TofinoPrinting.ml  PackageTofinoApp.ml
src/lib/backend/preprocess/: InterpHelpers.ml  OpGraph.ml  eliminateBools.ml  eliminateConsts.ml  normalizeBools.ml  normalizeInts.ml  precomputeArgs.ml  singleAssignment.ml
src/lib/backend/print/: P4tMgrPrint.ml  PrintUtils.ml  p4tContext.ml  p4tPrint.ml
src/lib/backend/printing/: ControlPrinter.ml  P4TofinoPrinting.ml  P4TofinoSyntax.ml  PackageTofinoApp.ml  coreToP4Tofino.ml  coreToP4TofinoHeaders.ml  coreToP4TofinoNew.ml
src/lib/backend/tofino/: RegularizeArrayOpAddrs.ml  tofinoPipeline.ml
src/lib/backend/tofinocore_transformations/: ParseOptimizer.ml  ParserHoisting.ml  RemoveInitOnlyStmts.ml  RemoveLocalInits.ml  RenameBuiltins.ml  addEgressHandlers.ml  addEgressParser.ml  addHandlerTypes.ml  addIntrinsics.ml  mergeHandlers.ml  propagateEvars.ml  rescopeHandlerParams.ml
src/lib/backend/transformations/: ActionForm.ml  ActionFormNew.ml  ActionsToFunctions.ml  ActionsToFunctionsNew.ml  AlignEventParams.ml  Dedup.ml  DedupNew.ml  EliminateExitEvents.ml  Generates.ml  GeneratesNew.ml  InlineEventVars.ml  InlineTableActions.ml  MatchAlgebra.ml  RemoveGenerates.ml  ShareMemopInputs.ml  ShareMemopInputsNew.ml  ShareMemopInputsSat.ml  SingleTableMatch.ml  SolitaryMatches.ml  SplitDataplane.ml  StandardizeEventParams.ml  UniqueTableActions.ml  addIngressParser.ml  ifToMatch.ml  regularizeMemops.ml  regularizeMemopsNew.ml  unifyHandlerParams.ml
src/lib/backend/translate/: TofinoConstants.ml  TofinoContext.ml  TofinoFromDpt.ml  TofinoMemop.ml  TofinoOp.ml  ValidateControlDag.ml
src/lib/backend/util/: BackendLogging.ml  BitvecEnum.ml  IoUtils.ml  ParsePortSpec.ml
src/lib/common/: Config.ml  InterpConfig.ml  Ports.ml  SoftSwitchConfig.ml  SwitchConfig.ml  TofinoConfig.ml
src/lib/config/: CConfig.ml  Config.ml  InterpConfig.ml  TofinoConfig.ml
src/lib/frontend/: Cmdline.ml  Collections.ml  Config.ml  Console.ml  Console.mli  CoreSyntax.ml  FrontendPipeline.ml  GlobalConstructorTagging.ml  GlobalDirectory.ml  Input.ml  Input.mli  Lexer.mll  Linerate.ml  Memops.ml  Parser.mly  Printing.ml  SlotAnalysis.ml  Syntax.ml  SyntaxGlobalDirectory.ml  SyntaxUtils.ml  TQVar.ml  Wellformed.ml
src/lib/frontend/analysis/: EventFormat.ml  GlobalConstructorTagging.ml  Profile.ml  SyntaxGlobalDirectory.ml  Wellformed.ml
src/lib/frontend/config/: Config.ml
src/lib/frontend/coreSyntax/: CorePrinting.ml  CoreSyntax.ml  SyntaxToCore.ml
src/lib/frontend/datastructures/: BitString.ml  BitString.mli  Cid.ml  Cid.mli  Id.ml  Id.mli  IndexedCid.ml  Integer.ml  Pragma.ml  Pragma.mli  Span.ml  Span.mli  taggedCid.ml  (+1 more)
src/lib/linker/: GenP4tappProj.ml  IoUtils.ml  JsonBlocks.ml  JsonEntryTriggers.ml  JsonExitActions.ml  LinkP4.ml  P4ExternSyntax.ml  PackageTofinoApp.ml  TriggerTable.ml
src/lib/midend/: CorePrinting.ml  CoreSyntax.ml  CoreSyntaxGlobalDirectory.ml  CoreZ3.ml  MidendPipeline.ml  SourceTracking.ml  headerTrie.ml  miscUtils.ml
src/lib/new_backend/: tofinoSyntax.ml
src/lib/serverlib/: cEventLib.ml  parseGenerators.ml  pyControlLib.ml  pyEventLib.ml
src/lib/tofinoLinker/: P4Lexer.mll  P4Parser.mly  P4Syntax.ml
(+1180 files in other folders)
