opam-version: "2.0"
name: "dp"
version: "~dev"
synopsis: "Dataplane threads"
maintainer: "David Walker <dpw@cs.princeton.edu>"
authors:
  "David Walker <dpw@cs.princeton.edu>"
license: "MIT"
homepage: "git+https://github.com/princedpw/dpt"
dev-repo: "git+https://github.com/princedpw/dpt.git"
bug-reports: "https://github.com/princedpw/dpt/issues"
depends: [
  "dune" { build }
  "odoc"
  "ounit"
  "integers"
  "ANSITerminal"
  "batteries"
  "lru-cache"
  "zarith"
  "mlcuddidl" { <= "3.0.4" }
  "ocamlgraph"
  "fileutils"
  "ppx_deriving"
  "ppx_deriving_argparse"
  "menhir"
  "parmap"
  "fix"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-f" "--no-buffer" "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
