opam-version: "2.0"
name: "dpt"
version: "~dev"
synopsis: "Dataplane threads"
maintainer: "John Sonchack <jsonch@princeton.edu>"
authors:
  "John Sonchack <jsonch@princeton.edu>"
license: "MIT"
homepage: "git+https://github.com/PrincetonUniversity/lucid"
dev-repo: "git+https://github.com/PrincetonUniversity/lucid"
bug-reports: "git+https://github.com/PrincetonUniversity/lucid/issues"
depends: [
  "odoc"
  "integers"
  "batteries" { = "3.5.1" }
  "ounit"
  "ANSITerminal"
  "menhir"
  "ppx_deriving"
  "ppx_string_interpolation"
  "zarith"
  "visitors"
  "fileutils"
  "ppx_import"
  "core"  { <= "v0.14.1" }
  "dune" { build }
  "ocamlgraph"
  "angstrom"
  "yojson"
  "pyml"
  "pprint"
  "z3"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-f" "--no-buffer" "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
