(include_subdirs unqualified)
(library
 (name dpt)
 (public_name dpt)
 (libraries
   batteries
   zarith
   ANSITerminal
   compiler-libs.common
   core
   ounit2
   ocamlgraph
   yojson
   z3
   angstrom
   fileutils
   pyml
   pprint
   )
 (modules
   cmdline
   console
   id
   cid
   taggedCid
   input
   integer
   span
   profile
   printing
   corePrinting
   parser
   lexer
   syntax
   globalConstructorTagging
   SyntaxGlobalDirectory
   syntaxUtils
   coreSyntax
   coreSyntaxGlobalDirectory
   sourceTracking
   coreZ3
   collections
   typer
   typerZ3
   typerUnify
   typerUtil
   typerInstGen
   typerModules
   memops
   wellformed
   functionInlining
   functionInliningSpecialCase
   tableInlining
   sizeInlining
   renaming
   globalArgElimination
   explicitReturns
   moduleAliasing
   recordElimination
   moduleElimination
   tupleElimination
   vectorElimination
   eStmtElimination
   symbolicElimination
   replaceUserTys
   partialInterpretation
   constInlining
   slotAnalysis
   frontendPipeline
   midendPipeline
   syntaxToCore
   interp
   interpCore
   interpControl
   pipeline
   preprocess
   interpSpec
   interpState
   interpSyntax
   libraryInterface
   arrays
   counters
   pairArrays
   system
   events
   payloads
   builtins
   TQVar
   backendLogging
   addDefaultBranches
   eliminateFloods
   precomputeArgs
   normalizeBools
   eliminateBools
   eliminateValueCasts
   eliminateInterpOps
   normalizeInts
   immutableConditions
   uniqueSpans
   uniqueIds
   interpHelpers
   miscUtils
   packageTofinoApp
   ioUtils
   TofinoProfiling
   TofinoPipeline
   TofinoPipelineNew
   DependencyProfiling
   InputChecks
   StandardizeEventParams
   EliminateEventCombinators
   AddIngressParser
   TofinoCore
   TofinoCoreNew
   AddEgressParser
   ParseOptimizer
   TofinoCorePrinting
   AddEgressHandlers
   AddHandlerTypes
   AddIntrinsics
   MergeHandlers
   TofinoCoreForms
   TofinoControl
   TofinoEgress
   InlineEventVars
   SolitaryMatches
   Generates
   GeneratesNew
   IfToMatch
   RegularizeMemops
   RegularizeMemopsNew
   ShareMemopInputs
   ShareMemopInputsNew
   SingleTableMatch
   ActionsToFunctions
   ActionsToFunctionsNew
   UniqueTableActions
   MatchAlgebra
   CoreCfg
   CoreCdg
   CoreDfg
   CoreResources
   ExternalLayout
   CoreLayoutOld
   CoreLayout
   ActionForm
   ActionFormNew
   Dedup
   DedupNew
   P4TofinoSyntax
   CoreToP4TofinoHeaders
   CoreToP4TofinoHeadersNew
   CoreToP4Tofino
   CoreToP4TofinoNew
   TofinoCoreToP4
   P4TofinoPrinting
   P4TofinoGlobalDirectory
   ControlPrinter
   ParsePortSpec
   cEventLib
   pyEventLib
   pyControlLib
   )
 (preprocess
    (staged_pps ppx_import visitors.ppx ppx_deriving.show ppx_deriving.std ppx_string))
)
(subdir frontend
   (menhir (modules Parser))
   (ocamllex (modules Lexer))
)
(subdir tofinoLinker
   (menhir (modules P4Parser))
   (ocamllex (modules P4Lexer))
)
