(include_subdirs unqualified)
(library
 (name dpt)
 (public_name dpt)
 (libraries
   batteries
   zarith
   ANSITerminal
   compiler-libs.common
   core
   ounit2
   ocamlgraph
   yojson
   z3
   angstrom
   fileutils
   pyml
   pprint
   )
 (modules
   cmdline
   console
   id
   cid
   taggedCid
   pragma
   BitString
   input
   integer
   span
   profile
   printing
   corePrinting
   parser
   lexer
   syntax
   globalConstructorTagging
   SyntaxGlobalDirectory
   syntaxUtils
   coreSyntax
   coreSyntaxGlobalDirectory
   sourceTracking
   coreZ3
   collections
   typer
   typerZ3
   typerUnify
   typerUtil
   typerInstGen
   typerModules
   memops
   wellformed
   functionInlining
   tableInlining
   sizeInlining
   builtinsTupleElimination
   renaming
   globalArgElimination
   explicitReturns
   moduleAliasing
   recordElimination
   moduleElimination
   tupleElimination
   vectorElimination
   concreteUserTypes
   eStmtElimination
   symbolicElimination
   replaceUserTys
   partialInterpretation
   constInlining
   slotAnalysis
   frontendPipeline
   midendPipeline
   syntaxToCore
   eliminateTBuiltin
   interp
   InterpConfig
   interpCore
   interpControl
   pipeline
   preprocess
   InterpJson
   interpSpec
   interpState
   InterpSwitch
   interpPayload
   interpSyntax
   funInterp
   libraryInterface
   libraryUtils
   arrays
   counters
   tables
   pairArrays
   system
   events
   payloads
   packet
   builtins
   TQVar
   backendLogging
   addDefaultBranches
   eliminateEventMatch
   eliminateFloods
   precomputeArgs
   normalizeBools
   eliminateBools
   eliminateValueCasts
   eliminateInterpOps
   normalizeInts
   immutableConditions
   uniqueSpans
   uniqueIds
   Despecialization
   interpHelpers
   miscUtils
   packageTofinoApp
   ioUtils
   TofinoProfiling
   TofinoPipeline
   DependencyProfiling
   InputChecks
   StandardizeEventParams
   EliminatePayloads
   EliminateEventCombinators
   Hoisting
   AddIngressParser
   TofinoSplit
   TofinoCore
   RemoveLocalInits
   RemoveInitOnlyStmts
   AddEgressParser
   ParserHoisting
   TofinoCorePrinting
   AddHandlerTypes
   AddIntrinsics
   MergeHandlers
   TofinoCoreForms
   InlineEventVars
   SolitaryMatches
   EliminateGenerates
   PropagateEvars
   IfToMatch
   RegularizeMemops
   ShareMemopInputsSat
   SingleTableMatch
   ActionsToFunctions
   UniqueTableActions
   MatchAlgebra
   DeparserChecksums
   TofinoCfg
   TofinoCdg
   TofinoDfg
   TofinoResources
   TofinoLayout
   ExternalLayout
   ActionForm
   TofinoDedup
   P4TofinoSyntax
   TofinoCoreToP4
   P4TofinoPrinting
   P4TofinoGlobalDirectory
   ControlPrinter
   ParsePortSpec
   cEventLib
   pyEventLib
   pyControlLib
   cPipeline
   cTranslate
   cLibs
   cTransformations
   strUtils

   deleteNoops
   CCoreSyntax
   CCoreTyper
   CheckFFuns
   CCorePPrint
   CoreToCCore
   CCoreToCore
   CPasses
   CCoreTables
   )
 (preprocess
    (staged_pps ppx_import visitors.ppx ppx_deriving.show ppx_deriving.std ppx_string))
)
(subdir frontend
   (menhir (modules Parser))
   (ocamllex (modules Lexer))
)
(subdir tofinoLinker
   (menhir (modules P4Parser))
   (ocamllex (modules P4Lexer))
)
